--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" ?>
-<project name="rostock" default="compile">
+<project name="rostock" default="compile_scad_to_stl" xmlns:fl="antlib:it.haefelinger.flaka">
 
     <!-- initialize some props -->
     <property name="proj" value="rostock" />
-    <property name="exec.path.oscad" value="openscad" />
     <tstamp>
         <format property="DATE_STAMP" pattern="yyyy-MM-dd" />
     	<format property="DATETIME_STAMP" pattern="yyyy-MM-dd_HHmm" />
@@ -15,15 +14,17 @@
     </condition>
     <property file="${isUnix}settings.properties" />
 	<echo message="Load property file: ${isUnix}settings.properties" />
+    <fl:install-property-handler />
 
 	<target name="pkg_default_files">
 		<property name="tar-filename"  value="${proj}-local-sites-default-files"/>
-        <property name="scp.name" value="${remote.user}:${remote.pwd}@${remote.host}:${remote.webpath}/sites/default/files/" />
 
         <echo message="Pkg files..." />
         <tar destfile="${tar-filename}.tar">
             <tarfileset dir="${local.webpath}/sites/default/files/" prefix="">
                 <exclude name="**/.svn" />
+                <exclude name="**/.git" />
+                <exclude name="**/.hg" />
             </tarfileset>
         </tar>
 
@@ -31,14 +32,14 @@
         <echo message="done pkg" />
 	</target>
 
-	<target name="-pack_no_files">
+	<target name="-pack_no_dist">
         <echo message="Pack files..." />
         <tar destfile="${proj}.tar">
             <tarfileset dir="${www}" prefix="${proj}">
-                <exclude name="sites/default/settings.base" />
-                <exclude name=".htaccess.base" />
                 <exclude name="**/.svn" />
-                <exclude name="files/**" />
+                <exclude name="**/.git" />
+                <exclude name="**/.hg" />
+                <exclude name="dist/**" />
             </tarfileset>
         </tar>
 
@@ -53,9 +54,8 @@
         <tar destfile="${pack}.tar">
             <tarfileset dir="${basedir}/.." prefix="${proj}">
                 <exclude name="**/.svn/**" />
-                <exclude name=".cache/**" />
-                <exclude name="scripts/**/*.tar" />
-                <exclude name="scripts/**/*.tgz" />
+                <exclude name="**/.git" />
+                <exclude name="**/.hg" />
             </tarfileset>
         </tar>
 
@@ -63,69 +63,22 @@
         <echo message="done" />
     </target>
 
-    <target name="settings_local">
-		<mkdir dir="${www}/sites/default/files" />
-        <echo message="Configure LOCAL settings..." />
-        <antcall target="-settings">
-            <param name="set.user" value="${db.user}" />
-            <param name="set.pwd" value="${db.pwd}" />
-            <param name="set.host" value="${db.host}" />
-            <param name="set.name" value="${db.name}" />
-            <param name="set.baseurl" value="${local.baseurl}" />
-        </antcall>
+	<target name="compile_scad_to_stl">
+        <fl:let>
+            d = file('./src');
+        </fl:let>
+        <fl:for var="name" in="d.list">
+            <fl:switch value="#{name}">
+                <re expr="^(\./src)(.*)\.scad" var="m">
+                <echo message="compiling #{m} to STL :: " />
+                <exec executable="${exec.path.oscad}">
+                    <arg line="-o dist/#{m[2]}.stl" />
+                    <arg line="-D 'quality=&quot;production&quot;'" />
+                    <arg line="#{m}" />
+                </exec>
+                </re>
+            </fl:switch>
+        </fl:for>
     </target>
 
-    <target name="settings_truelocal">
-		<mkdir dir="${www}/sites/default/files" />
-        <echo message="Configure TRUELOCAL settings..." />
-        <antcall target="-settings">
-            <param name="set.user" value="${truelocal.db.user}" />
-            <param name="set.pwd" value="${truelocal.db.pwd}" />
-            <param name="set.host" value="${truelocal.db.host}" />
-            <param name="set.name" value="${truelocal.db.name}" />
-            <param name="set.baseurl" value="${local.baseurl}" />
-        </antcall>
-    </target>
-
-    <target name="settings_remote">
-        <echo message="Configure REMOTE settings..." />
-        <antcall target="-settings">
-            <param name="set.user" value="${db.user}" />
-            <param name="set.pwd" value="${db.pwd}" />
-            <param name="set.host" value="${remote.db.host}" />
-            <param name="set.name" value="${db.name}" />
-            <param name="set.baseurl" value="${remote.baseurl}" />
-        </antcall>
-    </target>
-
-    <target name="settings_live">
-        <echo message="Configure LIVE settings..." />
-        <antcall target="-settings">
-            <param name="set.user" value="${remote.db.user}" />
-            <param name="set.pwd" value="${remote.db.pwd}" />
-            <param name="set.host" value="${remote.db.host}" />
-            <param name="set.name" value="${remote.db.name}" />
-            <param name="set.baseurl" value="${remote.baseurl}" />
-        </antcall>
-    </target>
-
-    <target name="-settings">
-        <echo message="Configure settings.php and .htaccess..." />
-
-        <!-- settings.php -->
-        <property name="settings" value="${www}/sites/default/settings" />
-        <copy file="${settings}.base" tofile="${settings}.php" overwrite="true" />
-        <replace file="${settings}.php" token="!db.user!" value="${set.user}" />
-        <replace file="${settings}.php" token="!db.pwd!" value="${set.pwd}" />
-        <replace file="${settings}.php" token="!db.host!" value="${set.host}" />
-        <replace file="${settings}.php" token="!db.name!" value="${set.name}" />
-        <replace file="${settings}.php" token="!baseurl!" value="${set.baseurl}" />
-
-        <!-- .htaccess.php -->
-        <property name="htaccess" value="${www}/.htaccess" />
-        <copy file="${htaccess}.base" tofile="${htaccess}" overwrite="true" />
-        <replace file="${htaccess}" token="!baseurl!" value="${set.baseurl}" />
-        
-        <echo message="done" />
-    </target>
 </project>
